[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "liftra"
version = "0.1.0"
description = "Comprehensive personal finance tracking application"
readme = "README.md"
authors = ["vindhavn <vindhavn@users.noreply.github.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.10"
# Core dependencies
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
# Database
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
# SQLite support
aiosqlite = "^0.19.0"
# Cloud storage (optional)
nextcloud-api = "^1.0.0"
google-api-python-client = "^2.114.0"
msal = "^1.25.0"
# Security
cryptography = "^42.0.0"
argon2-cffi = "^23.1.0"
# Data processing
pandas = "^2.1.4"
# Date/time handling
pytz = "^2024.1"
python-dateutil = "^2.8.2"
# File handling
python-multipart = "^0.0.6"
# Typing
typing-extensions = "^4.10.0"

# PDF generation
weasyprint = "^61.0"

# Plugins
importlib-metadata = "^7.0.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
# Linting and formatting
ruff = "^0.1.14"
black = "^24.1.1"
mypy = "^1.8.0"
# Type checking
sqlalchemy2-stubs = "^0.1.0"
# Documentation
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.15"
# Development tools
ipython = "^8.18.0"
ipdb = "^0.13.13"

[tool.poetry.group.android.dependencies]
# For Android development with Chaquopy
kivy = "^2.2.1"

[tool.poetry.group.web.dependencies]
# For web interface
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
jinja2 = "^3.1.3"

[tool.poetry.extras]
all = [
    "nextcloud-api",
    "google-api-python-client",
    "msal",
    "weasyprint",
    "fastapi",
    "uvicorn",
]

[tool.poetry.scripts]
liftra = "liftra.cli:main"
liftra-server = "liftra.server:main"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "ICN", # flake8-import-conventions
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PD",  # pandas-vet
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "S101",  # assert used
    "S311",  # Standard pseudo-random generators are not suitable for security
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/liftra"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"
